--- a/extension/history_page/index.html
+++ b/extension/history_page/index.html
@@ -39,6 +39,6 @@
       <div></div>
     </div>
   </div>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="history_page.js"></script>
 </body>
 </html>
