--- a/extension/options/options.html
+++ b/extension/options/options.html
@@ -18,15 +18,7 @@
           </tr>
           <tr>
             <td class="option-name">Color scheme</td>
-            <td>
-              <select class='COLOR' name='COLOR' />
-                <option>grey</option>
-                <option>green</option>
-                <option>blue</option>
-                <option>orange</option>
-                <option>pink</option>
-              </select>
-            </td>
+            <td><select class='COLOR' name='COLOR' /></select></td>
           </tr>
         </tbody>
       </table>
