--- a/extension/options/options.html
+++ b/extension/options/options.html
@@ -4,28 +4,10 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="options.css"/>
     <link rel="icon" type="image/png" href="/icons/hs16.png">
-    <title>Options</title>
+    <title>Manage Extension</title>
   </head>
 
   <body>
-    <h3>Settings</h1>
-    <form class="form">
-      <table>
-        <tbody>
-          <tr>
-            <td class="option-name">Page size</td>
-            <td><input type='number' class='PAGE_SIZE' name='PAGE_SIZE' /></td>
-          </tr>
-          <tr>
-            <td class="option-name">Color scheme</td>
-            <td><select class='COLOR' name='COLOR' /></select></td>
-          </tr>
-        </tbody>
-      </table>
-    </form>
-
-    <button class="save">Save</button><button class="defaults">Defaults</button>
-
     <script type="text/javascript" src="options.js"></script>
   </body>
 </html>
