--- a/extension/history_page/index.html
+++ b/extension/history_page/index.html
@@ -4,6 +4,7 @@
   <title>History Searcher</title>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="icon" type="image/png" href="/icons/hs16.png">
+  <meta charset="utf-8"/>
 </head>
 <body>
   <div class="wrapper">
@@ -18,8 +19,10 @@
       <button class="moveForward"></button>
       /
       <span class="totalPages page-number"></span>
-      <button class="jumpToPage" >Go to page</button>
-      <button class="settings">Settings</button>
+      <div class="lowerButtons">
+        <button class="jumpToPage" >Go to page</button>
+        <button class="saveButton"></button>
+      </div> 
     </div>
 
     <div class="table-container"></div>
