improve address bar ui

--- a/extension/help/help.html
+++ b/extension/help/help.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="icon" type="image/png" href="/icons/hs16.png">
-    <title>Help</title>
+    <title>How to Use</title>
   </head>
   <body>
     <section>
-      <h1>Help</h1>
+      <h1>How to Use</h1>
       <ul>
         <li><a href="#terms">Search terms</a></li>
         <li><a href="#tags">Tags</a></li>
