--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div id="app"></div>
   <script type="text/javascript" src="popup.js"></script>
 </body>
 </html>
